[tool.poetry]
name = "trackalyzer"
version = "0.1.2"
description = "identify visited points of interest in GPX tracks"
authors = ["khimaros <me@khimaros.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
gpxpy = "^1.4.2"
folium = "^0.12.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
trackalyzer = "trackalyzer.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
